Update DebateService.java